[package]
name = "async-mpesa"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
derive_builder = "0.12.0"
json = "0.12.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
