[package]
name = "async-mpesa"
version = "0.2.1"
edition = "2021"
readme = "readme.md"
license = "MIT OR Apache-2.0"
authors = ["Stewart <victorstew5@gmail.com>"]
description = "A rust library for accessing mpesa apis"
keywords = ["mpesa"]
categories = ["finance"]
repository = "https://github.com/VicStew/async-mpesa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
derive_builder = "0.12.0"
json = "0.12.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
